<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/network">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/titre"
            android:title="@string/titre"
            android:summary="@string/subtitle"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/luminosity"/>
    <PreferenceCategory app:title="@string/color" >
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/colors_values"
            android:entryValues="@array/colors_values"
            android:key="color_value"
            android:title="@string/choose_color" />
    </PreferenceCategory>

</PreferenceScreen>
